--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"postcss": "^8.4.38",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.4",
+		"shiki": "^1.7.0",
 		"svelte": "5.0.0-next.155",
 		"svelte-check": "^3.8.0",
 		"tailwindcss": "^3.4.4",
