chore: add engine to package json

--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
 	"dependencies": {
 		"@fontsource/lato": "^5.0.21",
 		"lucide-svelte": "^0.379.0"
+	},
+	"engines": {
+		"npm": ">=9.0.0",
+		"node": ">=20.0.0"
 	}
 }
