--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/kit": "^2.5.16",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@sveltejs/kit": "^2.5.27",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.10",
 		"@typescript-eslint/eslint-plugin": "^7.13.0",
@@ -22,19 +22,19 @@
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.39.4",
+		"eslint-plugin-svelte": "^2.45.1",
 		"mdsvex": "^0.11.2",
 		"postcss": "^8.4.38",
 		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.4",
+		"prettier-plugin-svelte": "^3.2.6",
 		"shiki": "^1.7.0",
-		"svelte": "5.0.0-next.155",
-		"svelte-check": "^3.8.0",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.6.3",
-		"typescript": "^5.4.5",
+		"typescript": "^5.5.0",
 		"typescript-svelte-plugin": "^0.3.38",
-		"vite": "^5.3.1"
+		"vite": "^5.4.4"
 	},
 	"type": "module",
 	"dependencies": {
